After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753473 - rtsp-server: shared media uri with explicit port given doesn't match same path uri without port
rtsp-server: shared media uri with explicit port given doesn't match same pat...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
1.4.5
Other Linux
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-10 15:15 UTC by Andreas Frisch
Modified: 2015-08-16 13:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
modified test-launch (3.12 KB, text/x-csrc)
2015-08-11 06:49 UTC, Andreas Frisch
  Details
media-factory: get default port if port is not specified in url (1.13 KB, patch)
2015-08-12 05:22 UTC, Hyunjun Ko
none Details | Review
media-factory: get port number through gst_rtsp_url_get_port (1.07 KB, patch)
2015-08-12 05:36 UTC, Hyunjun Ko
committed Details | Review

Description Andreas Frisch 2015-08-10 15:15:36 UTC
have a factory with
gst_rtsp_media_factory_set_shared (factory, TRUE);

connect with one client to rtsp://host/stream
connect with second client to rtsp://host:port/stream

and it tries to re-configure the media
Comment 1 Andreas Frisch 2015-08-11 06:49:35 UTC
Created attachment 309048 [details]
modified test-launch

run using:
sudo GST_DEBUG=*:2 ./test-launch -p 554  "( videotestsrc ! x264enc ! rtph264pay name=pay0 pt=96 )"

result when connecting with first vlc client to rtsp://host/test ->
0:00:03.135220130 13448       0x9d0850 WARN                 default test-launch.c:36:media_configure: media_configure
media is first configured and used

connecting with second client to same uri ->
nothing happens, same shared media is re-used

connecting with third client to rtsp://host:554/test ->
0:00:45.752208772 13448       0x9d0850 WARN                 default test-launch.c:36:media_configure: media_configure
new media is configured instead of using the exisiting one
Comment 2 Hyunjun Ko 2015-08-12 05:22:23 UTC
Created attachment 309098 [details] [review]
media-factory: get default port if port is not specified in url

This is because keys in the media hash table are different between these 2 cases.
Because if no port specifed, url->port set to 0.
Comment 3 Hyunjun Ko 2015-08-12 05:36:03 UTC
Created attachment 309099 [details] [review]
media-factory: get port number through gst_rtsp_url_get_port

Probably, this is more simple.
Comment 4 Andreas Frisch 2015-08-12 05:43:01 UTC
Comment on attachment 309099 [details] [review]
media-factory: get port number through gst_rtsp_url_get_port

This works for me, thanks Hyunjun!