media-factory: get port number through gst_rtsp_url_get_port

https://bugzilla.gnome.org/show_bug.cgi?id=753473